# quadruped_manipulator_framework

./: LICENSE  README.md
src/aliengo_controller/: package.xml
src/aliengo_controller/scripts/: robot_controller_gazebo.py
src/igus_arm_driver/: CMakeLists.txt  package.xml
src/igus_arm_driver/action/: IgusCommand.action
src/igus_arm_driver/config/: arm_setup.yaml  verbosity.conf
src/igus_arm_driver/include/igus_arm_driver/: arm_controller.h  arm_controller_hard.h  arm_controller_sim.h  can_bus_interface.h  igus_arm_driver.h  trac_kinematics.h
src/igus_arm_driver/launch/: igus_arm_driver_hard.launch  igus_arm_driver_sim.launch  plots.xml
src/igus_arm_driver/src/: igus_arm_driver_hard_node.cpp  igus_arm_driver_sim_node.cpp
src/igus_arm_driver/src/igus_arm_driver/: arm_controller.cpp  arm_controller_hard.cpp  arm_controller_sim.cpp  can_bus_interface.cpp  igus_arm_driver.cpp  trac_kinematics.cpp
src/igus_arm_driver/tests/: test_trac_lib.launch  test_trac_lib_node.cpp
src/igus_rviz_panel/: CMakeLists.txt  igus_rviz_panel.xml  package.xml
src/igus_rviz_panel/include/igus_rviz_panel/: igus_rviz_panel.hpp
src/igus_rviz_panel/resource/: igus_rviz_panel.ui
src/igus_rviz_panel/src/: igus_rviz_panel.cpp
src/quadruped_igus_bringup/: CMakeLists.txt  package.xml
src/quadruped_igus_bringup/config/: igus_trajectories.yaml  opti_moves.yaml  repeatibility_moves.yaml
src/quadruped_igus_bringup/launch/: run_robot.launch  run_simulation.launch
src/quadruped_igus_bringup/rviz/: igus_arm_controller.rviz  rqt_multiplot.xml
src/quadruped_igus_description/: CMakeLists.txt  package.xml
src/quadruped_igus_description/config/: arm_interface.yaml  gazebo.launch.xml  initial_positions.yaml
src/quadruped_igus_description/config/igus/: igus_controllers.yaml
src/quadruped_igus_description/config/quadruped/: quadruped_controllers.yaml
src/quadruped_igus_description/launch/: robot_description_bringup.launch  robot_sim_bringup.launch  robot_vizualization_bringup.launch
src/quadruped_igus_description/meshes/igus/: joint1.stl  joint2.stl  joint3.stl  link1.stl  link2.stl
src/quadruped_igus_description/meshes/mid70/: lidar.stl
src/quadruped_igus_description/meshes/quadruped/: carril.stl
src/quadruped_igus_description/urdf/: quadruped_igus.xacro  quadruped_igus_fixed.xacro
src/quadruped_igus_description/urdf/igus/: gazebo.xacro  macro.xacro
src/quadruped_igus_description/urdf/mid70/: const.xacro  livox_mid70.xacro
src/quadruped_igus_description/urdf/quadruped/: aliengo.xacro  aliengo_fixed.xacro  gazebo.xacro  leg.xacro  leg_fixed.xacro  transmission.xacro
