<?xml version="1.0"?>
<package format="2">
  <name>aliengo_controller</name>

  <version>0.0.0</version>
  <description>The unitree_controller.</description>

  <maintainer email="mariaslopes@todo.todo">mariaslopes</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
