<?xml version="1.0"?>
<package format="2">
  <name>quadruped_igus_description</name>
  <version>0.0.0</version>
  <description>The quadruped_igus_description package</description>

  <maintainer email="maria.s.lopes@inesctec.pt">Maria Lopes</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
